# CavemanController

./: .gitignore  CMakeLists.txt  CMakePresets.json  CavemanController_nucleo64.ioc  toolchain.cmake
.github/actions/setup/: action.yml  actions.yml
.github/workflows/: ci.yml
bsp/: CMakeLists.txt
bsp/boards/: CMakeLists.txt
bsp/boards/CAVeBoard/bsp_user/inc/: bsp_gpio_user.h  bsp_pwm_user.h
bsp/boards/CAVeBoard/bsp_user/src/: bsp_adc_user.c  bsp_gpio_user.c  bsp_pwm_user.c  bsp_uart_user.c  bsp_user.c
bsp/boards/CAVeBoard/rover_config/inc/: rover_4ws_config.h  rover_imu_config.h
bsp/boards/CAVeBoard/rover_config/src/: rover_4ws_config.c  rover_camera_config.c  rover_imu_config.c
bsp/boards/Nucleo-64/: CMakeLists.txt
bsp/boards/Nucleo-64/bsp_user/inc/: bsp_encoder_user.h  bsp_pwm_user.h  bsp_uart_user.h
bsp/boards/Nucleo-64/bsp_user/src/: bsp_encoder_user.c  bsp_pwm_user.c  bsp_uart_user.c
bsp/boards/STM32-E407/bsp_user/inc/: bsp_encoder_user.h  bsp_pwm_user.h  bsp_uart_user.h
bsp/boards/STM32-E407/bsp_user/src/: bsp_adc_user.c  bsp_encoder_user.c  bsp_gpio_user.c  bsp_pwm_user.c  bsp_uart_user.c  bsp_user.c
bsp/inc/: bsp.h  bsp_adc.h  bsp_encoder_user.h  bsp_logger_user.h  bsp_pwm_user.h  bsp_servo.h  bsp_uart.h
bsp/src/: bsp.c  bsp_adc.c  bsp_encoder.c  bsp_encoder_user.c  bsp_gpio.c  bsp_logger.c  bsp_logger_user.c  bsp_pwm.c  bsp_pwm_user.c  bsp_servo.c  bsp_tick.c  bsp_uart.c  bsp_uart_user.c
caveman_controller/inc/: caveman_buttons.h  caveman_cavetalk.h
caveman_controller/src/: caveman_buttons.c  caveman_cavetalk.c  caveman_controller.c
rover/inc/: rover.h  rover_4ws.h  rover_4ws_config.h  rover_camera_config.h  rover_imu.h  rover_pid.h
rover/src/: rover.c  rover_4ws.c  rover_4ws_config.c  rover_camera.c  rover_imu.c  rover_pid.c
tools/hooks/: pre-commit
